// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownIcon component arrow direction - bottom 1`] = `
<svg
  className="icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 11l-3.009 3.004L9 11"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component arrow direction - left 1`] = `
<svg
  className="icon"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 8l-4 4 4 4"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component arrow direction - right 1`] = `
<svg
  className="icon"
  height="20"
  viewBox="0 0 24 24"
  width="20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 8l4 4-4 4"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component arrow direction - unknown 1`] = `
<svg
  className="icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 11l-3.009 3.004L9 11"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component className prop 1`] = `
<svg
  className="icon TEST"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 11l-3.009 3.004L9 11"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component default snapshot 1`] = `
<svg
  className="icon"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 11l-3.009 3.004L9 11"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component disabled prop 1`] = `
<svg
  className="icon disabled"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 11l-3.009 3.004L9 11"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;

exports[`DropdownIcon component disabledClassName prop 1`] = `
<svg
  className="icon TEST"
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 11l-3.009 3.004L9 11"
    fill="none"
    fillRule="evenodd"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="1"
  />
</svg>
`;
